# robotics_class

./: .gitignore
algorithm/: CMakeLists.txt  package.xml
algorithm/script/: algorithm.py
common_msgs/: CMakeLists.txt  package.xml
common_msgs/msg/: Float32Vector3
common_msgs/srv/: service.srv
self_drive/: CMakeLists.txt  package.xml
self_drive/src/: self_drive.py
sensor/: CMakeLists.txt  package.xml
sensor/script/: sensor.py
